# coding-agent-session-viewer

./: README.md  pyproject.toml
src/claude_session_viewer/: __init__.py  __main__.py  app.py  app.tcss  parser.py  widgets.py
tests/: test_parser.py
tests/fixtures/: sample_session.jsonl
