[project]
name = "claude-session-viewer"
version = "0.1.0"
description = "TUI viewer for Claude Code session transcripts"
requires-python = ">=3.9"
dependencies = [
    "textual>=0.86.0",
]

[project.scripts]
claude-sessions = "claude_session_viewer.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_session_viewer"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
